<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_10sdp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_beach"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/img"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/txtplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/CategoryItemPlace"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginLeft="@dimen/_7sdp"
                        android:src="@drawable/map" />

                    <TextView
                        android:id="@+id/txtLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/CategoryItemLocation"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/dollar" />

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/CategoryItemPrice"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginLeft="@dimen/_7sdp"
                        android:src="@drawable/rate" />

                    <TextView
                        android:id="@+id/txtRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_7sdp"
                        android:layout_marginTop="5dp"
                        android:text="@string/CategoryItemRate"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/dark"
                android:textColor="@color/white"
                android:text="@string/CategoryItemBuy" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>