<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_21sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/backblack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/ProfileFmProfile"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"

                android:textStyle="bold" />


        </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/ProfileFmName"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/dark"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/mail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmEmail"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/smartphone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmMobile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="368dp"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/bookings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmBooking"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardhistory"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/support" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmTerms"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/privacy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmPrivacy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:id="@+id/txtAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/profileuser" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmAdmin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:id="@+id/txtMountain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/mntn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmMountain"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:id="@+id/txtBeach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/bach" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmBeach"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:id="@+id/txtLakes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/pond" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmLack"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:id="@+id/txtDesert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/dsrt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:text="@string/ProfileFmDesert"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardlogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_35sdp"
            app:cardBackgroundColor="@color/dark"
            app:cardCornerRadius="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ProfileFmLogout"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>



    </LinearLayout>
</ScrollView>

    </LinearLayout>

</LinearLayout>