<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
       android:layout_gravity="center"
        android:text="@string/LoginAccount"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_40sdp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputOuterFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:boxStrokeColor="#9EB384"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                style="@style/LoginTextInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your Email ID"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/LoginTextInputOuterFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:boxStrokeColor="#9EB384"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                style="@style/LoginTextInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your Password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp">

        <Button
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark"
            android:text="@string/Loginlogin" />

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@string/LoginOR"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:id="@+id/btnCreateAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark"
            android:text="@string/LoginCreateAccount" />


    </LinearLayout>

    <View
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/black" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />


</LinearLayout>